sorted/tests/05-match-expr.stderr
error: Fmt should sort before Io
  --> tests/05-match-expr.rs:88:13
   |
88 |             Fmt(e) => write!(f, "{}", e),
   |             ^^^
